Update .gitignore to include gitignore.io vim settings

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# Created by https://www.gitignore.io/api/vim
+
+### Vim ###
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
 *~
-.*.swp
+# auto-generated tag files
+tags
